tests/it/wire/snapshots/it__wire__openai_responses__encodes_request_metadata.snap
---
source: tests/it/wire/openai_responses.rs
expression: rendered
---
{
  "body": {
    "include": [
      "reasoning.encrypted_content"
    ],
    "input": [
      {
        "content": [
          {
            "text": "Hello",
            "type": "input_text"
          }
        ],
        "role": "user"
      }
    ],
    "max_output_tokens": 128,
    "metadata": {
      "tenant": "acme"
    },
    "model": "gpt-5.6-luna-2026-04-01",
    "store": false,
    "stream": false
  },
  "headers": [
    [
      "accept",
      "*/*"
    ],
    [
      "authorization",
      "[redacted]"
    ],
    [
      "content-length",
      "234"
    ],
    [
      "content-type",
      "application/json"
    ],
    [
      "host",
      "[host]"
    ],
    [
      "user-agent",
      "[user-agent]"
    ]
  ],
  "method": "POST",
  "path": "/v1/responses"
}
