tests/it/wire/snapshots/it__wire__openai_responses__encodes_sampling_controls_and_drops_stop_sequences.snap
---
source: tests/it/wire/openai_responses.rs
expression: rendered
---
{
  "body": {
    "include": [
      "reasoning.encrypted_content"
    ],
    "input": [
      {
        "content": [
          {
            "text": "Write one sentence.",
            "type": "input_text"
          }
        ],
        "role": "user"
      }
    ],
    "max_output_tokens": 128,
    "metadata": {
      "tenant": "acme"
    },
    "model": "gpt-5.6-luna-2026-04-01",
    "store": false,
    "stream": false,
    "temperature": 0.7,
    "top_p": 0.9
  },
  "headers": [
    [
      "accept",
      "*/*"
    ],
    [
      "authorization",
      "[redacted]"
    ],
    [
      "content-length",
      "278"
    ],
    [
      "content-type",
      "application/json"
    ],
    [
      "host",
      "[host]"
    ],
    [
      "user-agent",
      "[user-agent]"
    ]
  ],
  "method": "POST",
  "path": "/v1/responses"
}
