tests/it/wire/snapshots/it__wire__openai_responses__encodes_sampling_controls_including_stop_sequences.snap
---
source: tests/it/wire/openai_responses.rs
expression: rendered
---
{
  "method": "POST",
  "path": "/v1/responses",
  "headers": [
    [
      "accept",
      "*/*"
    ],
    [
      "authorization",
      "[redacted]"
    ],
    [
      "content-length",
      "300"
    ],
    [
      "content-type",
      "application/json"
    ],
    [
      "host",
      "[host]"
    ],
    [
      "user-agent",
      "[user-agent]"
    ]
  ],
  "body": {
    "model": "gpt-5.6-luna-2026-04-01",
    "input": [
      {
        "role": "user",
        "content": [
          {
            "type": "input_text",
            "text": "Write one sentence."
          }
        ]
      }
    ],
    "stream": false,
    "store": false,
    "include": [
      "reasoning.encrypted_content"
    ],
    "max_output_tokens": 128,
    "temperature": 0.7,
    "top_p": 0.9,
    "stop": [
      "END",
      "STOP"
    ],
    "metadata": {
      "tenant": "acme"
    }
  }
}
