tests/it/wire/snapshots/it__wire__openai_responses__encodes_the_base_request.snap
---
source: tests/it/wire/openai_responses.rs
expression: rendered
---
{
  "method": "POST",
  "path": "/v1/responses",
  "headers": [
    [
      "accept",
      "*/*"
    ],
    [
      "authorization",
      "[redacted]"
    ],
    [
      "content-length",
      "205"
    ],
    [
      "content-type",
      "application/json"
    ],
    [
      "host",
      "[host]"
    ],
    [
      "user-agent",
      "[user-agent]"
    ]
  ],
  "body": {
    "model": "gpt-5.6-luna-2026-04-01",
    "input": [
      {
        "role": "user",
        "content": [
          {
            "type": "input_text",
            "text": "Hello"
          }
        ]
      }
    ],
    "stream": false,
    "store": false,
    "include": [
      "reasoning.encrypted_content"
    ],
    "max_output_tokens": 128
  }
}
