tests/it/wire/snapshots/it__wire__openai_responses__encodes_tools_and_decodes_a_tool_call-2.snap
---
source: tests/it/wire/openai_responses.rs
expression: rendered
---
{
  "content": [
    {
      "data": {
        "encrypted_content": "gAAAAAopaque-reasoning-state",
        "id": "rs_tool",
        "summary": [],
        "type": "reasoning"
      },
      "kind": "openai.reasoning",
      "type": "opaque"
    },
    {
      "arguments": {
        "city": "Paris"
      },
      "id": "call_weather",
      "kind": "function",
      "name": "get_weather",
      "provider_metadata": {
        "openai": {
          "item_id": "fc_tool"
        }
      },
      "raw_arguments": "{\"city\":\"Paris\"}",
      "type": "tool_call"
    }
  ],
  "finish_reason": "tool_call",
  "id": "resp_tool",
  "model": {
    "model": "gpt-5.6-luna",
    "provider": "openai"
  },
  "raw": {
    "id": "resp_tool",
    "model": "gpt-5.6-luna-2026-04-01",
    "object": "response",
    "output": [
      {
        "encrypted_content": "gAAAAAopaque-reasoning-state",
        "id": "rs_tool",
        "summary": [],
        "type": "reasoning"
      },
      {
        "arguments": "{\"city\":\"Paris\"}",
        "call_id": "call_weather",
        "id": "fc_tool",
        "name": "get_weather",
        "status": "completed",
        "type": "function_call"
      }
    ],
    "status": "completed",
    "usage": {
      "input_tokens": 44,
      "input_tokens_details": {
        "cached_tokens": 0
      },
      "output_tokens": 21,
      "output_tokens_details": {
        "reasoning_tokens": 16
      },
      "total_tokens": 65
    }
  },
  "usage": {
    "cache_read": 0,
    "cache_write": 0,
    "input": 44,
    "output": 5,
    "reasoning": 16
  }
}
